<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nextbit.yassin.bakingapp.presenter.frag.RecipeButtons">
    <!-- TODO: Update blank fragment layout -->
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/mainsteps"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />
    </android.support.v4.widget.SwipeRefreshLayout>

</FrameLayout>
